# embedded-project-template

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md  STYLE_GUIDE.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DELIVERY_REPORT.md  TEST_REPORT.md  coding-style.md
scripts/: run_tests.sh
src/: app.cpp  main.cpp
tests/: test_app.cpp  test_template.py
